feat: setup server app and dependencies

--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "prepare": "husky"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "prepare": "husky"
+  },
   "engines": {
-    "node": ">=20.18.0",
-    "pnpm": ">=9.5.0"
+    "node": ">=20.18.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
@@ -27,5 +24,6 @@
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.11.0"
-  }
+  },
+  "packageManager": "pnpm@9.12.2"
 }
