--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^5.0.1"
+    "express": "^5.0.1",
+    "express-file-routing": "^3.0.3"
   },
   "devDependencies": {
     "@firefly/config": "workspace:*",
