feat: export helpers to start and stop web server

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,7 +4,10 @@
     "module": "CommonJS",
     "noEmit": false,
     "outDir": "dist",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@api/*": ["src/*"]
+    }
   },
   "include": ["**/*.ts", "src", "tests"]
 }
