--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "dev": "pnpm --recursive --parallel run dev",
     "prepare": "husky"
   },
   "engines": {
