--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^5.0.1",
-    "express-file-routing": "^3.0.3"
+    "express-file-routing": "^3.0.3",
+    "helmet": "^8.0.0",
+    "pino": "^9.5.0"
   },
   "devDependencies": {
     "@firefly/config": "workspace:*",
