--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,10 +4,7 @@
     "module": "CommonJS",
     "noEmit": false,
     "outDir": "dist",
-    "baseUrl": ".",
-    "paths": {
-      "@api/*": ["src/*"]
-    }
+    "baseUrl": "."
   },
-  "include": ["**/*.ts", "src", "tests"]
+  "include": ["**/*.ts", "src", "tests", "libraries", "routes"]
 }
