--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,19 +3,28 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "nodemon --watch ./ -x tsx server.ts",
-    "start": "NODE_ENV=production tsx server.ts"
+    "start": "NODE_ENV=production tsx server.ts",
+    "db:push": "drizzle-kit push",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "dbml": "tsx dbml.ts"
   },
   "dependencies": {
+    "@libsql/client": "^0.14.0",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.35.3",
     "express": "^5.0.1",
     "express-file-routing": "^3.0.3",
     "helmet": "^8.0.0",
-    "pino": "^9.5.0"
+    "pino": "^9.5.0",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@firefly/config": "workspace:*",
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.1",
+    "drizzle-dbml-generator": "^0.9.0",
+    "drizzle-kit": "^0.26.2",
     "nodemon": "^3.1.7",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
